<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bar_code">Bar Code* :</string>
    <string name="product_name">Product Name* :</string>
    <string name="product_category">Category* :</string>
    <string name="btn_new_category">New</string>
    <string name="product_location">Location :</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_code">Product Code* :</string>
    <string name="product_quantity">Quantity :</string>
    <string name="product_unit_cost">Unit Cost :</string>
    <string name="capture_image">Capture Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="save_product">Save</string>
    <string name="cancel_product">Cancel</string>
    <string name="transaction">TRANSACTION</string>
    <string name="transaction_mode">Transaction Mode :</string>
    <string name="rb_sales">Sales</string>
    <string name="rb_purchase">Purchase</string>
    <string name="transaction_date">Date :</string>
    <string name="product_code_options">Code Options :</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_list">List</string>
    <string name="bt_scan">Scan</string>
    <string name="tv_stock">Stock</string>
    <string name="tv_transaction_list">Transaction List</string>
    <string name="setups">Setup Options</string>

    <string-array name="strState">
    <item >
        Haryana
    </item>
      <item >
        Delhi
    </item>
	</string-array>
	
	<string-array name="strCity">
    <item >
        Panipat
    </item>
      <item >
        New Delhi
    </item>
    </string-array>
    
    <string-array name="strTransactionTypes">
    <item >
        Sales
    </item>
      <item >
        Purchase
    </item>
    </string-array>

</resources>
