<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/common_blue" >
        
		<TableLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">

	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/shining_black"
	            android:weightSum="1">
	            <TextView
	               android:layout_width="0dp"
	               android:layout_height="40dp"
	               android:gravity="center"
	               android:text="Transaction"
	               android:textColor="@color/subtitle_fground"
	               android:textAppearance="?android:attr/textAppearanceLarge"
	               android:layout_weight="0.4"/>
	            
	            <Button
		            android:id="@+id/btSave"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:text="Save"
		            android:layout_weight="0.3"
		            android:drawableLeft="@drawable/btn_ic_save"
		            android:onClick="onClickSave" />
	              
	            <Button
		            android:id="@+id/btCancel"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:text="@string/cancel_product"
		            android:layout_weight="0.3"
		            android:drawableLeft="@drawable/btn_ic_revert"
		            android:onClick="onCancel" />
	        </TableRow>
    	</TableLayout>
	<ScrollView android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/common_blue">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	        <TableLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:layout_margin="5dp" >
	
	            <TableRow
	                android:id="@+id/trTransactionMode"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvTransactionMode"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:text="@string/transaction_mode"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	                
	                <RadioGroup 
	                    android:id="@+id/rbgTransactionMode"
	                    android:layout_weight="1"
	                    android:layout_marginLeft="20dp">
	                    
	                    <RadioButton 
	                        android:id="@+id/rbSales"
	                        android:text="@string/rb_sales"
	                        android:checked="true"
	                        android:textColor="@android:color/white"/>
	                    
	                    <RadioButton 
	                        android:id="@+id/rbPurchase"
	                        android:text="@string/rb_purchase"
	                        android:textColor="@android:color/white"/>
	                    
	                </RadioGroup>
	            </TableRow>
	        </TableLayout>
	        <TableLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	
	            <TableRow
	                android:id="@+id/trDate"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvTransactionDate"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:text="@string/transaction_date"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	
	                <Button
	                    android:id="@+id/btDatePicker"
	                    android:layout_width="match_parent"
	                    android:layout_weight="1"
	                    android:onClick="onDateClick"
	                    android:textSize="20sp" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/trProductCode"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvProductCode"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:text="@string/product_code"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etProductCode"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:textSize="16sp" >
	
	                    <requestFocus />
	                </EditText>
	            </TableRow>
	            <TableRow
	                android:id="@+id/trProductCodeOptions"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvProductCodeOptions"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:text="@string/product_code_options"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	
	                <Button
	                    android:id="@+id/bt_verify_product_code"
	                    android:layout_width="0dp"
	                    android:layout_height="40dp"
	                    android:layout_weight="0.4"
	                    android:drawableStart="@drawable/btn_ic_ok"
	                    android:drawableLeft="@drawable/btn_ic_ok"
	                    android:onClick="onClickConfirm"
	                    android:text="@string/bt_confirm"/>
	                <Button
	                    android:id="@+id/bt_scan_barcode"
	                    android:layout_width="0dp"
	                    android:layout_height="40dp"
	                    android:layout_weight="0.3"
	                    android:drawableStart="@drawable/btn_ic_scan"
	                    android:drawableLeft="@drawable/btn_ic_scan"
	                    android:onClick="onClickScanBarcode"
	                    android:text="@string/bt_scan"/>
	
	                <Button
	                    android:id="@+id/bt_list_product"
	                    android:layout_width="0dp"
	                    android:layout_height="40dp"
	                    android:layout_weight="0.3"
	                    android:drawableLeft="@drawable/btn_ic_list"
	                    android:drawableStart="@drawable/btn_ic_list"
	                    android:text="@string/bt_list" />
					
	            </TableRow>
	            <TableRow
	                android:id="@+id/trProductName"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/tvProductName"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/product_name"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etProductName"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:textSize="16sp"
	                    android:enabled="false" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/trProductCategory"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvProductCategory"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/product_category"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etProductCategory"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:textSize="16sp"
	                    android:enabled="false" />
	
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/trProductLocation"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvProductLocation"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/product_location"
	                    android:textAppearance="?android:attr/textAppearanceMedium"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etProductLocation"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:textSize="16sp"
	                    android:enabled="false" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/trStock"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvStock"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:text="Stock:"
	                    android:textAppearance="?android:attr/textAppearanceMedium"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etStock"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:inputType="number"
	                    android:textSize="16sp"
	                    android:enabled="false" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/trProductUnitCost"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:weightSum="1" >
	
	                <TextView
	                    android:id="@+id/tvProductUnitCost"
	                    android:textColor="@android:color/white"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/product_unit_cost"
	                    android:textAppearance="?android:attr/textAppearanceMedium"
	                    android:textSize="16sp" />
	
	                <EditText
	                    android:id="@+id/etProductUnitCost"
	                    android:layout_width="match_parent"
	                    android:layout_height="40dp"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:inputType="number"
	                    android:textSize="16sp"
	                    android:enabled="false" />
	            </TableRow>
	            
	            <TableRow
		            android:id="@+id/trProductQuantity"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:weightSum="1" >
	
		            <TextView
		                android:id="@+id/tvProductQuantity"
		                android:textColor="@android:color/white"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/product_quantity"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:textSize="16sp" />
		
		            <EditText
		                android:id="@+id/etProductQuantity"
		                android:layout_width="match_parent"
		                android:layout_height="40dp"
		                android:layout_weight="1"
		                android:ems="10"
		                android:inputType="number"
		                android:textSize="16sp"/>
	        	</TableRow>
	        </TableLayout>
	   </LinearLayout>
	</ScrollView>
</LinearLayout>
